Added dragging functionality and many other things

--- a/index.html
+++ b/index.html
@@ -13,25 +13,13 @@
 		</section>
 		<section id='local'>
 		</section>
-		<section id='pallette'>
-			<div id='tote'>
-				<img src='images/tote.png'>
-			</div><!--
-			--><div id='yellow-tote'>
-				<img src='images/yellow-tote.png'>
-			</div><!--
-			--><div id='scoring-platform'>
-				<img src='images/scoring-platform.png'>
-			</div><!--
-			--><div id='mid-step'>
-				<img src='images/mid-step.png'>
-			</div><!--
-			--><div id='bin'>
-				<img src='images/bin.png'>
-			</div><!--
-			--><div id='litter'>
-				<img src='images/litter.png'>
-			</div>
+		<section id='palette'>
+			<div id='tote' style='background-image: url("images/tote-display.png")' draggable='true'></div><!--
+			--><div id='yellow-tote' style='background-image: url("images/yellow-tote-display.png")' draggable='true'></div><!--
+			--><div id='scoring-platform' style='background-image: url("images/scoring-platform-display.png")' draggable='true'></div><!--
+			--><div id='mid-step' style='background-image: url("images/mid-step-display.png")' draggable='true'></div><!--
+			--><div id='bin' style='background-image: url("images/bin-display.png")' draggable='true'></div><!--
+			--><div id='litter' style='background-image: url("images/litter-display.png")' draggable='true'></div>
 		</section>
 		<script src='js/jquery-1.11.2.js'></script>
 		<script src='js/home.js'></script>
