--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<head>
 		<title>FRC Scouting</title>
 		<link href='style.css' rel='stylesheet'>
+		<script src='js/html5shiv.js'></script>
 	</head>
 
 	<body>
@@ -21,12 +22,6 @@
 			--><div id='bin' style='background-image: url("images/bin-display.png")' draggable='true'></div><!--
 			--><div id='litter' style='background-image: url("images/litter-display.png")' draggable='true'></div>
 		</section>
-		<script>
-			var iosDragDropShim = {
-				enableEnterLeave: true
-			}
-		</script>
-		<script src='js/ios-drag-drop.js'></script>
 		<script src='js/jquery-1.11.2.js'></script>
 		<script src='js/home.js'></script>
 	</body>
