--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<section id='local'>
 		</section>
 		<section id='palette'>
-			<div id='tote' style='background-image: url("images/tote-display.png")' draggable='true'></div><!--
-			--><div id='yellow-tote' style='background-image: url("images/yellow-tote-display.png")' draggable='true'></div><!--
-			--><div id='scoring-platform' style='background-image: url("images/scoring-platform-display.png")' draggable='true'></div><!--
-			--><div id='mid-step' style='background-image: url("images/mid-step-display.png")' draggable='true'></div><!--
-			--><div id='bin' style='background-image: url("images/bin-display.png")' draggable='true'></div><!--
-			--><div id='litter' style='background-image: url("images/litter-display.png")' draggable='true'></div>
+			<div class='tote' style='background-image: url("images/tote-display.png")' draggable='true'></div><!--
+			--><div class='yellow-tote' style='background-image: url("images/yellow-tote-display.png")' draggable='true'></div><!--
+			--><div class='scoring-platform' style='background-image: url("images/scoring-platform-display.png")' draggable='true'></div><!--
+			--><div class='mid-step' style='background-image: url("images/mid-step-display.png")' draggable='true'></div><!--
+			--><div class='bin' style='background-image: url("images/bin-display.png")' draggable='true'></div><!--
+			--><div class='litter' style='background-image: url("images/litter-display.png")' draggable='true'></div>
 		</section>
 		<script src='js/jquery-1.11.2.js'></script>
 		<script>
